@@ -655,12 +655,12 @@ static int oss_driver_start (oss_driver_t *driver)
 	driver->threads = 0;
 	if (infd >= 0)
 	{
-		if (jack_create_thread(NULL, &driver->thread_in, 
+		if (jack_client_create_thread(NULL, &driver->thread_in, 
 			driver->engine->rtpriority, 
 			driver->engine->control->real_time, 
 			io_thread, driver) < 0)
 		{
-			jack_error("OSS: jack_create_thread() failed: %s@%i",
+			jack_error("OSS: jack_client_create_thread() failed: %s@%i",
 				__FILE__, __LINE__);
 			return -1;
 		}
@@ -669,12 +669,12 @@ static int oss_driver_start (oss_driver_t *driver)
 #	ifdef USE_BARRIER
 	if (outfd >= 0)
 	{
-		if (jack_create_thread(NULL, &driver->thread_out, 
+		if (jack_client_create_thread(NULL, &driver->thread_out, 
 			driver->engine->rtpriority, 
 			driver->engine->control->real_time, 
 			io_thread, driver) < 0)
 		{
-			jack_error("OSS: jack_create_thread() failed: %s@%i",
+			jack_error("OSS: jack_client_create_thread() failed: %s@%i",
 				__FILE__, __LINE__);
 			return -1;
 		}
